--- a/src/main/resources/templates/feed/feed_show.html
+++ b/src/main/resources/templates/feed/feed_show.html
@@ -6,8 +6,8 @@
     <title>feed show page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/feed_show.css">
+    <link rel="stylesheet" href="../../static/css/common.css">
+    <link rel="stylesheet" href="../../static/css/feed_show.css">
 
     <!-- fontawesome icon -->
     <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
@@ -16,14 +16,14 @@
 <h1>NAAAAAAAAAAAAAAAAAAAAAAAANNNNAAAVVV</h1>
 
 <section id="feed-show" class="container-fluid p-0">
-    <div class="container my-5">
+    <div class="container mt-5">
         <div class="row">
             <!--feed top-->
-            <div class="col-12 feed-show-top justify-content-between">
+            <div class="col-12 feed-show-top justify-content-between order-1">
                 <h2 class="fw-bold">제목</h2>
                 <div class="row">
-                    <div class="col feed-user py-4 f15 d-flex align-items-center">
-                        <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="24" alt="">
+                    <div class="col feed-user py-2 py-lg-5 f15 d-flex align-items-center">
+                        <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="24" alt="">
                         <div class="gg-dim-txt">
                             <span class="ms-1">검데렐라</span>
                             <span class="ms-2">2024.02.07</span>
@@ -34,46 +34,57 @@
                     </div>
                 </div>
             </div>
-            <!--feed 내용-->
-            <div class="col-12 mt-5">
+            <!--썸네일-->
+            <div class="col-12 order-0 order-md-1 p-0 px-md-5">
                 <!--썸네일-->
-                <div class="feed-show-img-box rounded-4 overflow-hidden mb-5">
-                    <img src="../img/feed/cebu.jpg" class="img-fluid" alt="">
-                </div>
-                <!--DATE-->
-                <div class="feed-show-date">
-                    <p class="fw-bold">여행 일자</p>
-                    <span class="me-1 gg-dark-txt">icon</span>
-                    <span class="gg-dark-txt">2024.02.07</span>
-                </div>
-                <hr class="my-5">
-                <!--CONTENT-->
-                <div class="feed-show-content">
-                    <p class="fw-bold">여행 기록</p>
-                    <p class="gg-dark-txt">룰룰루루.. 신나는 여행...........................</p>
-                </div>
-                <hr class="my-5">
-                <!--피드 하단-->
-                <div class="feed-show-bot p-5 text-center">
-                    <div class="gg-dim-txt pb-5 f13 fw-bold">
-                        ©<span>검데렐라</span>
-                    </div>
-                    <button type="button" class="btn btn-sm btn-outline-dark rounded-pill p-2 px-3">
-                        <i class="fa-regular fa-heart me-1"></i>좋아요
-                    </button>
-                    <div class="gg-dim-txt p-5 f13">
-                        <span>이 포스트를 사랑하는 사람들 ></span>
-                    </div>
+                <div class="mt-md-5 mb-4 mx-auto px-md-5">
+                    <img src="../../static/img/feed/cebu.jpg" class="img-fluid rounded-3" alt="">
                 </div>
             </div>
         </div>
+    </div>
+    <!--구분선 띠-->
+    <div class="d-md-none container-fluid px-0 py-2 my-4 bg-light">
+    </div>
+    <div class="container mb-5">
+        <!--feed 내용-->
+        <div class="col-12 mt-5 order-1">
+            <!--DATE-->
+            <div class="feed-show-date">
+                <p class="fw-bold">여행 일자</p>
+                <div class="align-items-center">
+                    <span class="me-1 gg-dark-txt"><i class="fa-regular fa-calendar"></i></span>
+                    <span class="gg-dark-txt">2024.02.07</span>
+                </div>
+            </div>
+            <hr class="my-5">
+            <!--CONTENT-->
+            <div class="feed-show-content">
+                <p class="fw-bold">여행 기록</p>
+                <p class="gg-dark-txt">룰룰루루.. 신나는 여행...........................</p>
+            </div>
+            <hr class="my-5">
+            <!--피드 하단-->
+            <div class="feed-show-bot p-4 text-center">
+                <div class="gg-dim-txt pb-5 f13 fw-bold">
+                    ©<span>검데렐라</span>
+                </div>
+                <button type="button" class="btn btn-sm btn-outline-dark rounded-pill p-2 px-3">
+                    <i class="fa-regular fa-heart me-1"></i>좋아요
+                </button>
+                <div class="gg-dim-txt p-5 f13">
+                    <span>이 포스트를 사랑하는 사람들 ></span>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <!-- 글쓴이 정보 -->
     <div class="feed-show-writer-bg py-4">
         <div class="container">
             <div class="row">
                 <div class="col feed-user pb-4 f15 d-flex align-items-center">
-                    <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="64" alt="">
+                    <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="64" alt="">
                     <div class="p-3">
                         <p class="p-0 m-0 fw-bold f20 mb-1">검데렐라</p>
                         <div class="gg-dim-txt f11">
@@ -89,14 +100,14 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
+                                <img src="../../static/img/feed/beer.jpg" class="img-fluid" alt="">
                             </div>
                             <span class="f12 d-block gg-dim-txt">이전피드</span>
                             <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
                         </div>
                         <div class="col-6 text-end">
                             <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
+                                <img src="../../static/img/feed/beer.jpg" class="img-fluid" alt="">
                             </div>
                             <span class="f12 d-block gg-dim-txt">다음피드</span>
                             <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
@@ -108,19 +119,20 @@
     </div><!---->
     <!--댓글-->
     <div class="container p-3">
-        <!--댓글 입력-->
+        <!--댓글 입력란-->
         <div class="row mx-auto d-flex justify-content-between align-items-center">
-            <div class="col-1 p-0 text-center">
-                <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="52" alt="">
+            <div class="col flex-grow-0 p-0 text-center">
+                <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="52" alt="">
             </div>
-            <div class="col flex-grow-1 p-0 mx-2">
+            <!--todo 팀장님 등록 버튼이 지금처럼 보여야하고, col 했을 때 모바일 틀어지는 부분 수정 요청 드립니다-->
+            <div class="col-2 col-md-1 order-1 flex-grow-0 p-0 text-center">
+                <button type="button" class="btn btn-secondary f13 py-3">등록</button>
+            </div>
+            <div class="col p-0 mx-2">
                 <span class="f11 feed-comment-title">
                     댓글
                 </span>
                 <input type="text" class="form-control p-2 pt-4 f14" placeholder="내용 입력">
-            </div>
-            <div class="col-1 flex-grow-0 p-0 py-2">
-                <button type="button" class="btn btn-secondary f13 py-3">등록</button>
             </div>
         </div>
         <hr>
