--- a/src/main/resources/templates/info/info.html
+++ b/src/main/resources/templates/info/info.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Carrier info</title>
+<title>info</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -12,9 +12,8 @@
 <link rel="stylesheet" href="../css/common.css">
 <link rel="stylesheet" href="../css/info.css">
 <link rel="stylesheet" href="../css/nav.css">
-<link rel="stylesheet" href="../css/footer.css">
 
-<!--파비콘영역-->
+<!-- 파비콘 영역 -->
 	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
@@ -32,7 +31,6 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-	<!--파비콘영역 끝-->
 </head>
 <body>
 	<div th:replace="nav/nav::nav"></div>
@@ -288,7 +286,7 @@
 			</div>
 		</div>
 	</div>
-	<div th:replace="footer/footer::footer"></div>
+
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
