--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -6,8 +6,8 @@
 footer {
   position: relative;
   width: 100%;
-  margin-top: 10%;
-  background: #e7dbd1;
+  margin-top: 3%;
+  background: rgba(48,88,138,1);
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
@@ -28,7 +28,7 @@ footer .footer-menu {
 
 footer .social-icon li a {
   font-size: 2rem;
-  color: black;
+  color: #ffffff;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
@@ -36,7 +36,7 @@ footer .social-icon li a {
 
 footer .footer-menu li a {
   font-size: 1rem;
-  color: black;
+  color: #ffffff;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
@@ -50,7 +50,7 @@ footer .footer-menu li a:hover {
 }
 
 footer p {
-  color: black;
+  color: #ffffff;
   text-align: center;
   margin-top: 15px;
   margin-bottom: 10px;
@@ -58,7 +58,7 @@ footer p {
   opacity: 0.8;
 }
 
-/*
+
 @media (min-width: 300px) {
   footer .social-icon li a {
     font-size: 2rem;
@@ -75,4 +75,4 @@ footer p {
     transition: 0.5s;
     opacity: 0.4;
   }
-}*/
+}
