--- a/src/main/resources/templates/aicc/aicc.html
+++ b/src/main/resources/templates/aicc/aicc.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Carrier AiSearch</title>
+<title>ai</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -12,28 +12,6 @@
 <link rel="stylesheet" href="../css/common.css">
 <link rel="stylesheet" href="../css/ai.css">
  <link rel="stylesheet" href="../css/nav.css">
- <link rel="stylesheet" href="../css/search.css">
-<link rel="stylesheet" href="../css/footer.css">
-
-<!--파비콘영역-->
-	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="../img/favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="../img/favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="../img/favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="../img/favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../img/favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
-	<!--파비콘영역 끝-->
 </head>
 <body>
 	<div th:replace="nav/nav::nav"></div>
@@ -242,7 +220,7 @@
 				</div>
 			</div>
 		</div>
-		<div th:replace="footer/footer::footer"></div>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
